--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<table>
 						<tr>
 							<td>
-								<img src="resources/img/arbol.png" id="arbol" width="50" height="50">
+								<img src="resources/imagenes/arbol.png" id="arbol" width="50" height="50">
 					         </td>
 					         <td>
 					         	<h1>dinypoladus</h1>
