--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 						<tr>
 							<td>
 								<img src="resources/imagenes/arbol.png" id="arbol" width="50" height="50">
-					         </td>
-					         <td>
+							 </td>
+							 <td>
 					         	<h1>dinypoladus</h1>
 						     </td>
 						</tr>
@@ -38,36 +38,41 @@
 				</div>
 					<div id="seccion">
 						<section>
-						    <h5>emulador de nes</h5>
-                            <ul>
-                                <li>
-                                    <a href="resources/apps/jnes_1_2_1.exe">descargar jnes</a>
-                                    <ul>  
-                                        <h5> juegos para nes</h5>
-                                        <li>
-                                            <a href="resources/apps/nes/Balloon Fight (USA).zip">balloon Fight</a>
-                                        </li>
-                                        <li>
-                                            <a href="resources/apps/nes/Friday the 13th (USA).zip">Friday the 13</a>
-                                        </li>
-                                        <li>
-                                            <a href="resources/apps/nes/Kirby's Adventure (USA).zip">kirby Adventure</a>
-                                        </li>
-                                         <li>
-                                            <a href="resources/apps/nes/Legend of Zelda, The (USA) (1).zip">the Legend of Zelda</a>
-                                        </li>
-                                         <li>
-                                            <a href="resources/apps/nes/Metroid (USA).zip">Metroid</a>
-                                        </li>
-                                         <li>
-                                            <a href="resources/apps/nes/Super Mario Bros. 3 (USA).zip">super mario 3</a>
-                                        </li>
-                                         <li>
-                                            <a href="resources/apps/nes/tetris(USA).zip">tetris</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
+							<table>
+								<tr>
+									<td>
+										<h5>instaladores</h5>
+								    		<a href="resources/apps/jnes_1_2_1.exe">descargar jnes</a>
+									</td>
+									<td>
+									     <ul>  
+										<h5> juegos para nes</h5>
+										<li>
+										    <a href="resources/apps/nes/Balloon Fight (USA).zip">balloon Fight</a>
+										</li>
+										<li>
+										    <a href="resources/apps/nes/Friday the 13th (USA).zip">Friday the 13</a>
+										</li>
+										<li>
+										    <a href="resources/apps/nes/Kirby's Adventure (USA).zip">kirby Adventure</a>
+										</li>
+										 <li>
+										    <a href="resources/apps/nes/Legend of Zelda, The (USA) (1).zip">the Legend of Zelda</a>
+										</li>
+										 <li>
+										    <a href="resources/apps/nes/Metroid (USA).zip">Metroid</a>
+										</li>
+										 <li>
+										    <a href="resources/apps/nes/Super Mario Bros. 3 (USA).zip">super mario 3</a>
+										</li>
+										 <li>
+										    <a href="resources/apps/nes/tetris(USA).zip">tetris</a>
+										</li>
+									    </ul>
+						
+									</td>
+								</tr>
+							</table>
 						</section>
 					</div>
 			</main>
